hq now starts again